Fixed Styles. Moved slider to Extensionmethod. default error message for clientside issues. Move collapser outside of template. Wrapped content for width. List<String> -> string[].

--- a/src/Bootstrap/less/theme/page-upload.less
+++ b/src/Bootstrap/less/theme/page-upload.less
@@ -1,21 +1,4 @@
 .page-upload {
-    h2 {
-        .ms-Icon {
-            font-size: 0.6em;
-            position: relative;
-            top: -2px;
-        }
-
-        a {
-            color: #000;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: none;
-        }
-    }
-
     .loading:after {
         overflow: hidden;
         display: inline-block;
